# OOP_14.1

./: .flake8  README.md  conftest.py  main.py  pyproject.toml
src/: __init__.py  task_1.py
tests/: conftest.py  test_task_1.py
